Updated code to use the latest codegen and fixed build issues